Created sequencing proportional symbols
Added sequenc chart to scroll through enrollment attributes.

--- a/leaflet-lab/index.html
+++ b/leaflet-lab/index.html
@@ -23,7 +23,7 @@
 <!--        <div id="mapid" style="height: 300px;">Web Map Goes Here</div>--> 
 
         <div id="schoolmap">Enrollment Map Goes Here</div>
-        <div id="panel">Panel</div>
+        <div id="panel"></div>
 
 		
         <!--you can also use this space for internal scripts or stylesheets;
